[project]
name = "slang-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "numpy>=2.0.2",
    "pydantic>=2.12.2",
    "torch>=2.8.0",
    "transformers>=4.57.1",
]
